# MinecraftClone

./: CMakeLists.txt  README.md  main.cpp
classes/: Camera.cpp  IBO.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
headers/: Camera.h  IBO.h  Renderer.h  Shader.h  Texture.h  VAO.h  VBO.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: default.frag  default.vert
